--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,4 @@
 @font-face {
-  font-family: 'Delius';
-  src: url("./fonts/Delius-Regular.ttf")
-}
-
-@font-face {
-  font-family: 'Itim';
-  src: url("./fonts/Itim-Regular.ttf")
-}
-
-@font-face {
   font-family: 'ShortStack';
   src: url("./fonts/ShortStack-Regular.ttf")
 }
@@ -16,6 +6,11 @@
 @font-face {
   font-family: 'Montserrat';
   src: url("./fonts/Montserrat-VariableFont_wght.ttf")
+}
+
+@font-face {
+  font-family: 'Pacifico';
+  src: url("./fonts/Pacifico-Regular.ttf")
 }
 
 /* Resets */
@@ -53,6 +48,8 @@ ul{
   min-height: 100vh;
   color: var(--text-color);
   font-family: "ShortStack";
+  display: flex;
+  flex-direction: column;
 }
 
 #priscillas{
@@ -61,6 +58,10 @@ ul{
 
 #scoops{
   background-color: var(--scoops-body-bg);
+}
+
+.content{
+  flex: 1;
 }
 
 #priscillas header{
@@ -106,10 +107,6 @@ p{
   padding: 1rem;
 }
 
-p:nth-of-type(1){
-  font-family: "ShortStack";
-}
-
-p:nth-of-type(2){
-  font-family: "Montserrat";
+h1{
+  font-family: "Pacifico";
 }
