--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,22 @@ header{
   fill: var(--text-color);
 }
 
+.light-mode #priscillas #priscillas-logo{
+  filter: drop-shadow(0px 0px 1px black);
+}
+
+.light-mode #scoops #scoops-logo{
+  filter: drop-shadow(2px 2px 6px black);
+}
+
+.dark-mode #priscillas #priscillas-logo{
+  filter: drop-shadow(0px 0px 1px white);
+}
+
+.dark-mode #scoops #scoops-logo{
+  filter: drop-shadow(2px 2px 6px white);
+}
+
 #priscillas-logo{
   width: 230px;
   height: 81px;
